# nexus-inventary

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
backend/apps/authentication/: admin.py  backends.py  dashboard_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/chatbot/: README.md  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/empresas/: admin.py  mappers.py  models.py  orm_models.py  repositories.py  serializers.py  tests.py  urls.py  views.py
backend/apps/inventario/: admin.py  mappers.py  models.py  orm_models.py  repositories.py  serializers.py  views.py
backend/apps/productos/: admin.py  mappers.py  models.py  orm_models.py  repositories.py  serializers.py  views.py
backend/config/: settings.py  urls.py
domain/: README.md  pyproject.toml
domain/nexus_domain/: __init__.py
domain/nexus_domain/entities/: __init__.py  empresa.py  inventario.py  producto.py
domain/nexus_domain/exceptions/: __init__.py
domain/nexus_domain/interfaces/: __init__.py
domain/nexus_domain/use_cases/: __init__.py  empresa_use_cases.py  inventario_use_cases.py  producto_use_cases.py
domain/nexus_domain/value_objects/: __init__.py
domain/tests/: conftest.py  test_entities.py  test_use_cases.py  test_value_objects.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ProtectedRoute.jsx
nginx/: nginx.conf
(+64 files in other folders)
