[tool.poetry]
name = "nexus-domain"
version = "1.0.0"
description = "Capa de dominio del sistema NEXUS - Clean Architecture"
authors = ["NEXUS Team <nexus@example.com>"]
readme = "README.md"
packages = [{include = "nexus_domain"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
mypy = "^1.7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
